# QSDsan-api

./: .dockerignore  .gitignore  CLAUDE.md  CSV.md  Dockerfile  prd_document.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/blueprints/: combustion.py  fermentation.py  htl.py
app/data/combustion/: combustion_data.csv
app/data/htl/: htl_data.csv
app/middleware/: __init__.py  error_handler.py  performance.py  security.py
app/models/: __init__.py  combustion.py  fermentation.py  htl.py
app/routers/: __init__.py  combustion.py  fermentation.py  health.py  htl.py  v2_example.py
app/services/: combustion_service.py  fermentation_service.py  htl_service.py
guides/: activity_log.json  migration.md  uv_guide.md
scripts/: precompute_htl.py
tests/: conftest.py  test_combustion.py  test_fermentation.py  test_htl.py
