[project]
name = "waste-energy-api"
version = "2.0.0"
description = "High-performance API for waste-to-energy calculations"
requires-python = ">=3.10"
dependencies = [
    "ansicolors==1.1.8",
    "asttokens==3.0.0",
    "attrs==25.1.0",
    "biorefineries==2.31.0",
    "biosteam==2.46.1",
    "blinker==1.9.0",
    "chaospy==4.3.17",
    "chemicals==1.3.2",
    "click==8.1.8",
    "colorama==0.4.6",
    "colorpalette==0.3.3",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "decorator==5.2.1",
    "dill==0.3.9",
    "et_xmlfile==2.0.0",
    "exceptiongroup==1.2.2",
    "executing==2.2.0",
    "exposan==1.4.1",
    "flexcache==0.3",
    "flexparser==0.4",
    "flexsolve==0.5.7",
    "fluids==1.1.0",
    "fonttools==4.56.0",
    "free-properties==0.3.6",
    "graphviz==0.20.3",
    "h11==0.14.0",
    "importlib_metadata==8.6.1",
    "ipython==8.33.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "Jinja2==3.1.5",
    "joblib==1.4.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "kiwisolver==1.4.8",
    "llvmlite==0.43.0",
    "MarkupSafe==3.0.2",
    "matplotlib==3.10.1",
    "matplotlib-inline==0.1.7",
    "mistune==3.1.2",
    "mpmath==1.3.0",
    "multiprocess==0.70.17",
    "numba==0.60.0",
    "numpoly==1.2.12",
    "numpy==1.26.4",
    "openpyxl==3.1.5",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pillow==11.1.0",
    "Pint==0.24.4",
    "platformdirs==4.3.6",
    "prompt_toolkit==3.0.50",
    "pure_eval==0.2.3",
    "pyglet==2.1.3",
    "Pygments==2.19.1",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "PyYAML==6.0.2",
    "qsdsan==1.4.1",
    "referencing==0.36.2",
    "rpds-py==0.23.1",
    "SALib==1.5.1",
    "scikit-learn==1.6.1",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "six==1.17.0",
    "stack-data==0.6.3",
    "sympy==1.13.3",
    "thermo==0.4.1",
    "thermosteam==0.45.0",
    "threadpoolctl==3.5.0",
    "traitlets==5.14.3",
    "typing_extensions==4.12.2",
    "tzdata==2025.1",
    "wcwidth==0.2.13",
    "Werkzeug==3.1.3",
    "xlrd==2.0.1",
    "zipp==3.21.0",
    # FastAPI stack for API modernization
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    # Additional utilities for modernization
    "python-multipart>=0.0.6",  # for form data handling
    "email-validator>=2.0.0",   # for email validation in FastAPI
    "psutil>=5.9.0",            # for system monitoring in health checks
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "httpx>=0.25.0",  # for testing FastAPI endpoints
]
cache = [
    "redis>=5.0.0",
    "hiredis>=2.0.0",  # faster redis client
]
monitoring = [
    "prometheus-client>=0.17.0",
    "structlog>=23.0.0",
]
security = [
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "httpx>=0.25.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]